# IIR_Biquad

./: CMakeLists.txt  README.md
IIR_Biquad/: IIRFilter.c  IIRFilter.h  IIR_Biquad.1  main.c
IIR_Biquad.xcodeproj/: project.pbxproj
IIR_Biquad.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IIR_Biquad.xcodeproj/project.xcworkspace/xcuserdata/hosack.xcuserdatad/: UserInterfaceState.xcuserstate
IIR_Biquad.xcodeproj/xcuserdata/hosack.xcuserdatad/xcschemes/: IIR_Biquad.xcscheme  xcschememanagement.plist
src/: IIRFilter.h
